# time_series_trading

./: README.md  analysis.py  autotune_300.py  prepare.py  program.md  pyproject.toml  results.tsv  train.py
artifacts/: autotune_300_best.json  autotune_300_trials.jsonl
src/trading_forecast/: __init__.py  run_experiment.py
src/trading_forecast/data/: coinbase_client.py  pipeline.py
src/trading_forecast/models/: architectures.py
src/trading_forecast/training/: compare.py
tests/: test_compare.py  test_models.py  test_pipeline.py  test_run_experiment.py
