[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-series-trading"
version = "0.2.0"
description = "Coinbase BTC futures data pipeline and neural forecasting model comparison"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "requests>=2.32",
  "scikit-learn>=1.5",
  "plotly>=5.24",
  "torch>=2.2",
  "tqdm>=4.66"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
